tests/expectations/compiler/finalize/finalize_returns_value_fail.out
Error [ETYC0372106]: An async function is not allowed to return a value.
    --> compiler-test:7:5
     |
   7 |     async function finalize_public_adder(a: u8, b: u8) -> public u8 {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   8 |         return a + b;
     |         ^^^^^^^^^^^^^
   9 |     }
     |     ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the future returned by async functions is automatically inferred, and must not be explicitly written.
